[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Nodes/Scripts/DialogNode.gd" type="Script" id=1]

[node name="DialogNode" type="GraphNode"]
anchor_left = 0.509
anchor_top = 0.5
anchor_right = 0.509
anchor_bottom = 0.5
margin_left = -651.52
margin_top = -360.0
margin_right = -345.52
margin_bottom = -180.0
rect_min_size = Vector2( 300, 180 )
size_flags_horizontal = 0
size_flags_vertical = 0
title = "Dialog Node"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 0.196078, 0.772549, 0.192157, 1 )
slot/0/right_enabled = false
slot/0/right_type = 1
slot/0/right_color = Color( 0.133333, 0.360784, 0.713726, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="TitleText" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 216.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 20 )
hint_tooltip = "Title of the dialog"
size_flags_horizontal = 0
text = "New Dialog"
wrap_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 45.0
margin_right = 290.0
margin_bottom = 156.0

[node name="DialogText" type="TextEdit" parent="HBoxContainer"]
margin_right = 250.0
margin_bottom = 111.0
rect_min_size = Vector2( 250, 111 )
size_flags_horizontal = 0
syntax_highlighting = true
wrap_enabled = true

[node name="AddPlayerResponse" type="Button" parent="HBoxContainer"]
margin_left = 254.0
margin_right = 274.0
margin_bottom = 111.0
text = "+"

[node name="IDLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 157.0
margin_right = 290.0
margin_bottom = 171.0
text = "ID: -1"

[connection signal="close_request" from="." to="." method="_on_DialogNode_close_request"]
[connection signal="offset_changed" from="." to="." method="_on_DialogNode_offset_changed"]
[connection signal="focus_entered" from="TitleText" to="." method="_on_TitleText_focus_entered"]
[connection signal="gui_input" from="TitleText" to="." method="_on_TitleText_gui_input"]
[connection signal="text_changed" from="TitleText" to="." method="_on_TitleText_text_changed"]
[connection signal="focus_entered" from="HBoxContainer/DialogText" to="." method="_on_DialogText_focus_entered"]
[connection signal="gui_input" from="HBoxContainer/DialogText" to="." method="_on_DialogText_gui_input"]
[connection signal="pressed" from="HBoxContainer/AddPlayerResponse" to="." method="_on_AddPlayerResponse_pressed"]
